[UPD] Crezione lista su index.html e aggiunti li tramite js

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>FizzBuzz</title>
 </head>
 <body>
+    <ul class="list">
+        
+    </ul>
 
     <script src="./js/main.js"></script>
 </body>
