--- a/index.html
+++ b/index.html
@@ -4,11 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FizzBuzz</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <ul class="list">
-        
-    </ul>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <h1>
+                    FizzBuzzDOM
+                </h1>
+                <ul class="list">
+            
+                </ul>
+            </div>
+        </div>
+    </div>
 
     <script src="./js/main.js"></script>
 </body>
