[FIX] Piccole correzioni post correzione in classe

--- a/index.html
+++ b/index.html
@@ -17,12 +17,11 @@
                     FizzBuzzDOM
                 </h1>
                 <ul class="list">
-            
                 </ul>
             </div>
         </div>
     </div>
-
+    <!-- collegamento a js -->
     <script src="./js/main.js"></script>
 </body>
 </html>
